NetBSD Problem Report #55083

From martin@aprisoft.de  Thu Mar 19 05:39:44 2020
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D86E61A9213
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 19 Mar 2020 05:39:44 +0000 (UTC)
Message-Id: <20200319053934.A7EA35CC8D0@emmas.aprisoft.de>
Date: Thu, 19 Mar 2020 06:39:34 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: assertion "pmap->pm_stats.resident_count == PDP_SIZE" failed
X-Send-Pr-Version: 3.95

>Number:         55083
>Category:       port-amd64
>Synopsis:       assertion "pmap->pm_stats.resident_count == PDP_SIZE" failed
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    ad
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 19 05:40:00 +0000 2020
>Closed-Date:    Mon Apr 20 19:19:02 +0000 2020
>Last-Modified:  Mon Apr 20 19:19:02 +0000 2020
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.50
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD seven-days-to-the-wolves.aprisoft.de 9.99.50 NetBSD 9.99.50 (GENERIC) #369: Wed Mar 18 21:10:34 CET 2020 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64

(current as of a few minutes before that time, but with
src/sys/arch/x86/acpi/acpi_cpu_md.c r1.81, see kern/55080.

>Description:

[ 12828.3912668] panic: kernel diagnostic assertion "pmap->pm_stats.resident_cou
nt == PDP_SIZE" failed: file "../../../../arch/x86/x86/pmap.c", line 2936 pmap 0
xffff8169c1766600 not empty
[ 12828.5913328] cpu3: Begin traceback...
[ 12828.6613673] vpanic() at netbsd:vpanic+0x146
[ 12828.7413921] kern_assert() at netbsd:kern_assert+0x48
[ 12828.8113948] pmap_remove_all() at netbsd:pmap_remove_all+0x2f0
[ 12828.8814161] uvmspace_exec() at netbsd:uvmspace_exec+0xc8
[ 12828.9514388] execve_runproc() at netbsd:execve_runproc+0x8a7
[ 12829.0214590] execve1() at netbsd:execve1+0x4e
[ 12829.0714751] sys_execve() at netbsd:sys_execve+0x2a
[ 12829.1314942] syscall() at netbsd:syscall+0x265
[ 12829.1815097] --- syscall (number 59) ---
[ 12829.2315252] 741829a42e2a:
[ 12829.2615341] cpu3: End traceback...

(internal note: seven, netbsd.3.core)

Dump and netbsd.gdb available on request.


>How-To-Repeat:

I left the machine doing a build.sh -j 12, not sure if that had completed by
the time it crashed.

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-amd64-maintainer->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Thu, 19 Mar 2020 18:34:07 +0000
Responsible-Changed-Why:
take


From: "Andrew Doran" <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55083 CVS commit: src/sys/arch/x86/x86
Date: Thu, 19 Mar 2020 18:58:14 +0000

 Module Name:	src
 Committed By:	ad
 Date:		Thu Mar 19 18:58:14 UTC 2020

 Modified Files:
 	src/sys/arch/x86/x86: pmap.c

 Log Message:
 PR port-amd64/55083 (assertion "pmap->pm_stats.resident_count == PDP_SIZE" failed)

 Reported-by: syzbot+2c1e17352173a60eec23@syzkaller.appspotmail.com

 Don't screw up resident_count in failure path.


 To generate a diff of this commit:
 cvs rdiff -u -r1.377 -r1.378 src/sys/arch/x86/x86/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: ad@NetBSD.org
State-Changed-When: Thu, 19 Mar 2020 19:03:34 +0000
State-Changed-Why:
Thanks for the crashdump.  Fixed.


State-Changed-From-To: feedback->closed
State-Changed-By: ad@NetBSD.org
State-Changed-When: Mon, 20 Apr 2020 19:19:02 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.