PR port-amd64/55083 (assertion "pmap->pm_stats.resident_count == PDP_SIZE" failed)

Reported-by: syzbot+2c1e17352173a60eec23@syzkaller.appspotmail.com

Don't screw up resident_count in failure path.